--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,8 @@ NODE_ENV=development
 PORT=3000
 
 # Base de datos PostgreSQL
-# DB_LOG_QUERIES: true = ver queries truncadas en consola (dev). false = solo errores
+# DB_LOG_QUERIES: true = ver queries en consola (dev). false = solo errores
+# DB_LOG_QUERY_MAX_LENGTH: caracteres máximos del SQL en logs. 0 = sin truncar, default 2000
 # DB_POOL_SIZE: conexiones máximas en el pool (para ~200 usuarios concurrentes usar 80+; PostgreSQL max_connections debe ser >= este valor)
 
 # OPCIÓN A - Supabase (recomendado para producción/cloud)
@@ -20,6 +21,7 @@ PORT=3000
 # OPCIÓN B - PostgreSQL local (si DATABASE_URL no está definida)
 DB_POOL_SIZE=80
 DB_LOG_QUERIES=true
+DB_LOG_QUERY_MAX_LENGTH=2000
 DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
